# OTBot

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  compose.yml  export_pictures.py  logger_config.py  main.py  populate file table.py  populate_file_table.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci-pre-commit.yml
bot/: bot_exceptions.py  common_utils.py  config.py  constants.py  enums.py  set_bot_commands.py
bot/db/: database.py  models.py
bot/docs/: report_template.xlsx  категории нарушений.xlsx
bot/handlers/: __init__.py  base_commands.py  base_handlers.py  common_handlers.py  detection_handlers.py  handlers_utils.py  register_command.py
bot/handlers/approve_handlers/: __init__.py  approve_commands.py  approve_commands_handlers.py  approve_handlers.py
bot/handlers/area_handlers/: __init__.py  area_commands.py  area_commands_handlers.py  area_handlers_utils.py  states.py
bot/handlers/base_handlers/: __init__.py  base_comand_hendlers.py  base_commands.py
bot/handlers/detection_handlers/: __init__.py  detection_commands.py  detection_commands_handlers.py  detection_keyboards.py  detection_utils.py  states.py
bot/handlers/reports_handlers/: __init__.py  create_reports.py  generate_typst.py  report_settings.json  report_utils_new.py  reports_commands.py  reports_commands_handlers.py  reports_utils.py  states.py
bot/handlers/violation_handlers/: __init__.py  states.py  violation_commands.py  violation_commands_handlers.py
bot/keyboards/: approve_keyboards.py  category_buttons.json  common_keyboards.py  keyboard_utils.py
bot/keyboards/inline_keyboards/: callback_factories.py  create_keyboard.py
bot/middlewares/: db_middleware.py  user_middleware.py
bot/migration/: env.py
bot/migration/versions/: 006d3742096f_добавление_в_максимовсую_конфигурацию_.py  087be05bcb78_initial.py  0b5cef9673cd_добавил_в_нарушения_поле_с_хэшем_.py  207e086b029a_phone_number.py  2af50ef87374_violation_category_fix.py  886f60b7d0e3_responsible_text_fiels.py  f47ab99549f1_добавил_таблицы_добавляющие_.py  fb3bd500c7ff_добавил_две_таблицы_файлы_и_их_связь_с_.py
bot/reports/: create_reports.py
bot/repositories/: area_repo.py  image_repo.py  user_repo.py  violation_repo.py
bot/services/: violation_service.py
bot/utils/: image_utils.py
data/json/: category_buttons.json
data/typst/template/: main.j2
src/: main.py  scheduler.py
src/bot/: config.py  constants.py  logger_config.py  set_bot_commands.py
src/bot/db/: database.py  models.py  schemas.py
src/bot/handlers/: __init__.py  common_handlers.py  handlers_utils.py
src/bot/keyboards/: category_buttons.json  keyboard_utils.py
src/bot/middlewares/: user_middleware.py
src/bot/migration/: env.py
src/bot/repositories/: area_repo.py  user_repo.py  violation_repo.py
src/bot/services/: email.py  reports.py  violation_service.py
tests/: test_base_commands.py
tests/repositories/: test_violation_repo.py
typst/: report.typ
typst/template/: main.j2  row.j2
(+49 files in other folders)
