[project]
name = "otbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiosqlite>=0.21.0",
    "alembic>=1.15.2",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "pillow>=11.2.1",
    "pydantic-settings>=2.9.1",
    "reportlab>=4.4.0",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.6",
]
